--- a/src/main/resources/static/admin.html
+++ b/src/main/resources/static/admin.html
@@ -14,13 +14,25 @@
     if (!requireAuth([1])) return;
 </script>
 
-<header>
+<header style="display:flex; justify-content:space-between; align-items:center;">
     <h2>Admin Dashboard</h2>
+
+    <!-- 🔥 Rejected Audit Badge -->
+    <span id="rejected-badge" style="
+        background:#ffcccc;
+        color:#900;
+        padding:4px 8px;
+        border-radius:5px;
+        font-weight:bold;
+        margin-right:20px;
+    ">0</span>
+
     <button onclick="doLogout()">Logout</button>
 </header>
 
-<main class="card-row" style="padding:20px;">
+<main class="card-row" style="padding:20px; display:flex; flex-direction:column; gap:20px;">
 
+    <!-- USER MANAGEMENT -->
     <section class="card" style="width:100%;">
         <h3>User Management</h3>
 
@@ -32,10 +44,23 @@
         <div id="users-output">Loading...</div>
     </section>
 
+    <!-- REJECTED AUDIT LOGS -->
+    <section class="card" style="width:100%;">
+        <h3>Rejected Audit Logs</h3>
+
+        <div id="rejected-panel" style="
+            margin-top:10px;
+            padding:10px;
+            border:1px solid #ddd;
+            background:#f9f9f9;
+        ">
+            Loading...
+        </div>
+    </section>
+
 </main>
 
 <script src="api.js"></script>
-script src="admin.js"></script>
 <script src="admin.js"></script>
 
 </body>
